[project]
name = "langgraph-agency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "tavily-python",
    "python-dotenv",
    "langchain-tavily",
    "Pillow",
    "chromadb",
    "langchain-chroma",
    "langsmith>=0.4.4",
    "rich",
]
